--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,19 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-  h2 {
+  h1 {
     font-family: Cabin;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
+  }
+  h2 {
+    font-family: Cabin;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
   }
   p {
     font-family: "Roboto";
@@ -17,18 +24,16 @@
     font-size: 14px;
     line-height: 20px;
   }
+
+  .subtitle {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+svg.star-svg {
+  display: inline;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
